--- a/tsi.conf
+++ b/tsi.conf
@@ -3,15 +3,16 @@
 [GLOBAL]
 ITERATIONS  = 1      # Number of Iterarions
 SIMULATIONS = 1      # Number of Simulations per iterations
-GRIDS       = 11     # Number of grids in memory 
-USEFS       = Y      # Use file system for swapping grids
+USEFS       = 1      # Use file system for swapping grids
  
 [SEISMIC]
 FILENAME = ../data/smallTest/sismica2.out     # Seismic file 
 
 [GRID]
-XNUMBER = 19      # Number of blocks in X direction (NX)
-YNUMBER = 19      # Number of blocks in Y direction (NY)
+XNUMBER = 150      # Number of blocks in X direction (NX)
+YNUMBER = 150      # Number of blocks in Y direction (NY)
+#XNUMBER = 19      # Number of blocks in X direction (NX)
+#YNUMBER = 19      # Number of blocks in Y direction (NY)
 ZNUMBER = 200     # Number of blocks in Z direction (NZ)
 
 [CORR]
@@ -196,10 +197,4 @@ GLOBAL_LOG_DIR          = ../data/smallTest/logs/
 BCM = -2
 BAI = 0
 
-
-[SYSTEM]
-NODES = 1          # Number of nodes in the cluster
-CPU   = 1          # Number of processors per node
-GRIDS = 5          # Maximum grids in memory
-USEFS = Y          # Use local file system for swapping
 
