--- a/tsi.conf
+++ b/tsi.conf
@@ -1,8 +1,8 @@
 ##### General Parameters #####
 
 [GLOBAL]
-ITERATIONS  = 100      # Number of Iterarions
-SIMULATIONS = 100      # Number of Simulations per iterations
+ITERATIONS  = 8     # Number of Iterations
+SIMULATIONS = 128    # Number of Simulations per iterations
 USEFS       = 1      # Use file system for swapping grids
  
 [SEISMIC]
