--- a/tsi.conf
+++ b/tsi.conf
@@ -1,9 +1,14 @@
 ##### General Parameters #####
 
 [GLOBAL]
-ITERATIONS  = 8     # Number of Iterations
-SIMULATIONS = 128    # Number of Simulations per iterations
+ITERATIONS  = 4     # Number of Iterations
+SIMULATIONS = 32    # Number of Simulations per iterations
+
+[HEAP]
+SIZE        = 20     # Number of available grids
+THRESHOLD   = 8      # Number of grids to allocate before attempting to swap
 USEFS       = 1      # Use file system for swapping grids
+
  
 [SEISMIC]
 FILENAME = ../data/smallTest/sismica2.out     # Seismic file 
