--- a/tsi.conf
+++ b/tsi.conf
@@ -14,11 +14,10 @@ USEFS       = 1      # Use file system for swapping grids
 FILENAME = ../data/smallTest/sismica2.out     # Seismic file 
 
 [GRID]
-XNUMBER = 150      # Number of blocks in X direction (NX)
-YNUMBER = 150      # Number of blocks in Y direction (NY)
-#XNUMBER = 19      # Number of blocks in X direction (NX)
-#YNUMBER = 19      # Number of blocks in Y direction (NY)
-ZNUMBER = 200     # Number of blocks in Z direction (NZ)
+XNUMBER = 19      # Number of blocks in X direction (NX)
+YNUMBER = 19      # Number of blocks in Y direction (NY)
+ZNUMBER = 20      # Number of blocks in Z direction (NZ)
+#ZNUMBER = 200     # Number of blocks in Z direction (NZ)
 
 [CORR]
 LAYERS_MIN     = 4        # minimum number of layers
