--- a/tsi.conf
+++ b/tsi.conf
@@ -3,13 +3,13 @@
 [GLOBAL]
 ITERATIONS  = 4     # Number of Iterations
 SIMULATIONS = 32    # Number of Simulations per iterations
+OPTIMIZE    = 1     # Optimize parallel execution
 
 [HEAP]
-SIZE        = 20     # Number of available grids
+SIZE        = 13     # Number of available grids
 THRESHOLD   = 8      # Number of grids to allocate before attempting to swap
-USEFS       = 0      # Use file system for swapping grids
+USEFS       = 1      # Use file system for swapping grids
 
- 
 [SEISMIC]
 FILENAME = ../data/smallTest/sismica2.out     # Seismic file 
 
