--- a/tsi.conf
+++ b/tsi.conf
@@ -1,33 +1,155 @@
-##### General Parameters #####
+########################################################################
+#                                                                      #
+#     TSI Parameters                                                   #
+#                                                                      #
+########################################################################
 
 [GLOBAL]
-ITERATIONS  = 4     # Number of Iterations
-SIMULATIONS = 32    # Number of Simulations per iterations
-OPTIMIZE    = 1     # Optimize parallel execution
+# The global parameter ITERATIONS sets the number of iterations the TSI.
+# A higher number yields a higher correlation result. There's no default
+# value. This is a mandatory parameter.
+ITERATIONS = 1
+
+# The global parameter SIMULATIONS set the number o simulations that will
+# be executed for each iteration of the TSI. A higher number yields a higher
+# correlation result. This is a mandatory parameter.
+SIMULATIONS = 1
+
+# The global parameter OPTIMIZE applies only to parallel execution of the
+# program. If this parameter is set to 1 (default), the program will try
+# to optimize execution by relating the number of simulations to the number
+# of processes running. If there are less than 2^n simulations per process
+# launched, it will free number of CPU that will not contribute to speed-up
+# the execution. It might be useful to set this parameter to false to access
+# more memory on the cluster.
+OPTIMIZE = 0
+
 
 [HEAP]
-SIZE        = 13     # Number of available grids
-THRESHOLD   = 8      # Number of grids to allocate before attempting to swap
-USEFS       = 1      # Use file system for swapping grids
+# The heap SIZE parameter sets the number of grids that will be made
+# available for the TSI execution. The default value is 14, the current
+# maximum number of grids that are needed.
+#SIZE = 14
 
-[SEISMIC]
-FILENAME = ../data/smallTest/sismica2.out     # Seismic file 
+# The heap USEFS parameter is the flag that triggers swapping unused grids
+# to disk to save memory. The default value is 0 (false). If the program
+# is being executed on a cluster, no local file system is needed for each
+# node. Although a local file system would yield the best performance, the
+# program can use any file system available to the cluster.
+#USEFS = 1
+
+# The heap THRESHOLD parameter sets the number of grids to allocate before
+# attempting to swap any grid to disk. The default value is 8, the minimum
+# number of grids needed in memory by TSI. If the value is set to 0, the
+# heap will only allocate more space when it's needed. If the value is set
+# to the heap SIZE, no swapping will occur (same as USEFS = 0). Higher values
+# yield less swapping.
+#THRESHOLD = 8
+
+# The heap PATH parameters sets the path to the location where the swap
+# files will bw stored. The default value is "/tmp/"
+#PATH = /tmp/
+
 
 [GRID]
-XNUMBER = 19      # Number of blocks in X direction (NX)
-YNUMBER = 19      # Number of blocks in Y direction (NY)
-ZNUMBER = 20      # Number of blocks in Z direction (NZ)
+# corrTest-miguel
+#XNUMBER = 19      # Number of blocks in X direction (NX)
+#YNUMBER = 19      # Number of blocks in Y direction (NY)
 #ZNUMBER = 200     # Number of blocks in Z direction (NZ)
+# corrTest
+XNUMBER = 194      # Number of blocks in X direction (NX)
+YNUMBER = 192      # Number of blocks in Y direction (NY)
+ZNUMBER = 200     # Number of blocks in Z direction (NZ)
+# bigTest
+#XNUMBER = 300      # Number of blocks in X direction (NX)
+#YNUMBER = 300      # Number of blocks in Y direction (NY)
+#ZNUMBER = 320     # Number of blocks in Z direction (NZ)
+
+
+[SEISMIC]
+# corrTest-miguel
+#FILENAME = ../inputData/sismica2.out     # Seismic file 
+# corrTest
+FILENAME = ../inputData/sismica1.out     # Seismic file 
+# bigTest
+#FILENAME = ../inputData/sismica.out     # Seismic file 
+
 
 [CORR]
 LAYERS_MIN     = 4        # minimum number of layers
 LAYER_SIZE_MIN = 25       # minimum size of a layer
+BCM_ROOT = 1              # Correlation parameters???
 
+
+##### Dump Parameters #####
+
+[DUMP]
+DUMP_DOUBLE_VALUE_FORMAT = %.4Lf\\n     # Format of values to write
+SYNTH                    = 0            # Dump synthetic grid flag
+CORR                     = 0            # Dump correlations grid flag
+BAI                      = 0            # Dump best acoustic impedance grid flag
+BCM                      = 0            # Dump best correlations grid flag
+AI                       = 0            # Dump acoustic impedance grid flag
+
+
+##### Locations ans names of files to dump #####
+
+[FILENAME]
+PATH                    = ../corrTest-miguel/
+#SYNTH_DUMP_DIR          = ../corrTest-miguel/synth_dump/     #TODO: este ficheiro ja' nao e' usado!
+SYNTH_DUMP              = SY_Simul
+SYNTH_DUMP_SUFIX        = .out
+CORR_DUMP_DIR           = ../corrTest-miguel/corr_dump/
+CORR_DUMP               = CORR_Simul
+CORR_DUMP_SUFIX         = .out
+BCM                     = ../corrTest-miguel/BCM
+BAI                     = ../corrTest-miguel/BAI
+BEST_CUBES_DIR          = ../corrTest-miguel/best_cubes/
+BEST_GLOBAL_CORR        = Best_Global_Corr_Cube_Simul
+BEST_GLOBAL_CORR_SUFIX  = .out
+BEST_GLOBAL_AI          = Best_Global_AI_Cube_Simul
+BEST_GLOBAL_AI_SUFIX    = .out
+BEST_SECTION_CORR       = Best_Section_Corr_Cube_Simul
+BEST_SECTION_CORR_SUFIX = .out
+BEST_SECTION_AI         = Best_Section_AI_Cube_Simul
+BEST_SECTION_AI_SUFIX   = .out
+TEMP_DIR                = ../corrTest-miguel/temp/
+GLOBAL_LOG_DIR          = ../corrTest-miguel/logs/
+
+
+##### BCM & BAI Initial values ##### 
+
+[INIT]
+BCM = -2
+BAI = 0
+
+
+
+########################################################################
+#                                                                      #
+#     SI Parameters                                                    #
+#                                                                      #
+########################################################################
+
+##### Wavelet Parameters #####
+
+[WAVELET]
+FILENAME = ../inputData/Wavelet.prn     # Wavelet file 
+USED_VALUES = 64                             # Size of wavelet -1
+SPOTS = 32                                   # (not usable)
+
+
+
+########################################################################
+#                                                                      #
+#     DSS Parameters                                                   #
+#                                                                      #
+########################################################################
 
 ##### Hard Data Parameters #####
 
 [HARDDATA]
-FILENAME = ../data/smallTest/Wells.prn     # Hard Data file 
+FILENAME = ../inputData/Wells.prn     # Hard Data file 
 NVARI    = 4                               # Number of columns in the data file (to eliminate)
 IXL      = 1                               # Column number of X coordinate
 IYL      = 2                               # Column number of Y coordinate
@@ -62,25 +184,20 @@ ICVAR  = 1     # Variance correction flag
 ICMEAN = 1     # Average correction flag 
 
 
-##### Real Seismic #####
-
 ##### Grid Parameters #####
 
 [GRID]
-XCOORD = 10403     # Coordinate in X axis of the first block (XMN)
-YCOORD = 4159      # Coordinate in Y axis of the first block (YMN)
-ZCOORD = 1418      # Coordinate in Z axis of the first block (ZMN)
 XSIZE  = 1         # Block size in X axis (XSIZ)
 YSIZE  = 3         # Block size in Y axis (YSIZ)
 ZSIZE  = 1         # Block size in Z axis (ZSIZ)
-
-
-##### Wavelet Parameters #####
-
-[WAVELET]
-FILENAME=../data/smallTest/Wavelet.prn     # Wavelet file 
-USED_VALUES=64                             # Size of wavelet -1
-SPOTS=32                                   # (not usable)
+# smallTest/corrTest
+XCOORD = 10403     # Coordinate in X axis of the first block (XMN)
+YCOORD = 4159      # Coordinate in Y axis of the first block (YMN)
+ZCOORD = 1418      # Coordinate in Z axis of the first block (ZMN)
+# bigTest
+#XCOORD = 10403     # Coordinate in X axis of the first block (XMN)
+#YCOORD = 4000      # Coordinate in Y axis of the first block (YMN)
+#ZCOORD = 1299      # Coordinate in Z axis of the first block (ZMN)
 
 
 ##### Mask and null values #####
@@ -88,13 +205,7 @@ SPOTS=32                                   # (not usable)
 [MASK]
 NULL_VALUE = -99999.25                      # Null value (NOSVALUE)
 USE_MASK   = 0                              # Use of mask flag (IMASK)
-FILENAME   = ../data/smallTest/Mask.dat     # Mask file 
-
-
-##### Correlations Parameters #####
-
-[CORR]
-BCM_ROOT = 1
+FILENAME   = ../inputData/Mask.dat     # Mask file 
 
 
 ##### Search Parameters #####
@@ -124,6 +235,7 @@ COLOCORR = 0     # Global CC to ktype=4
 VARRED   = 0.6   # Variance reduction factor to ktype=4,5
 
 
+
 ##### Soft Data Parameters #####
 
 [SOFT]
@@ -131,12 +243,12 @@ NVARIL  = 1     # Number of columns in the secundary data file
 ICOLLVM = 1     # Column number of secundary variable 
 
 
+
 ##### Variogram Models #####
 
 [VARIOGRAM]
 NUGGET = 0     # Nugget constant (C0(1))
 NUMBER = 1     # Number of semivariograms structures (NST(1))
-
 
 [VARIOGRAM1]
 TYPE = 2      # Struture type ;1=spherical,2=exponential,3=gaussian (IT(i))
@@ -148,7 +260,6 @@ AA   = 220    # Maximum horizontal range (AA(i))
 AA1  = 60     # Minimum horizontal range (AA1) 
 AA2  = 12     # Vertical range (AA2) 
 
-
 [VARIOGRAM2]
 #TYPE= "[1]COV + [2]COV + NUGGET = 1.0"
 #COV=
@@ -158,47 +269,4 @@ AA2  = 12     # Vertical range (AA2)
 #AA=
 #AA1=
 #AA2=
-
-
-##### Dump Parameters #####
-
-[DUMP]
-DUMP_DOUBLE_VALUE_FORMAT = %.4Lf\\n     #Format of values to write
-SYNTH                    = 0
-CORR                     = 0
-BAI                      = 0
-BCM                      = 0
-AI                       = 0
-
-
-##### Locations ans names of files to dump #####
-
-[FILENAME]
-#SYNTH_DUMP_DIR          = ../data/smallTest/synth_dump/     #TODO: este ficheiro ja' nao e' usado!
-SYNTH_DUMP              = SY_Simul
-SYNTH_DUMP_SUFIX        = .out
-CORR_DUMP_DIR           = ../data/smallTest/corr_dump/
-CORR_DUMP               = CORR_Simul
-CORR_DUMP_SUFIX         = .out
-BCM                     = ../data/smallTest/BCM
-BAI                     = ../data/smallTest/BAI
-BEST_CUBES_DIR          = ../data/smallTest/best_cubes/
-BEST_GLOBAL_CORR        = Best_Global_Corr_Cube_Simul
-BEST_GLOBAL_CORR_SUFIX  = .out
-BEST_GLOBAL_AI          = Best_Global_AI_Cube_Simul
-BEST_GLOBAL_AI_SUFIX    = .out
-BEST_SECTION_CORR       = Best_Section_Corr_Cube_Simul
-BEST_SECTION_CORR_SUFIX = .out
-BEST_SECTION_AI         = Best_Section_AI_Cube_Simul
-BEST_SECTION_AI_SUFIX   = .out
-TEMP_DIR                = ../data/smallTest/temp/
-GLOBAL_LOG_DIR          = ../data/smallTest/logs/
-
-
-##### BCM & BAI Initial values ##### 
-
-[INIT]
-BCM = -2
-BAI = 0
-
 
