--- a/tsi.conf
+++ b/tsi.conf
@@ -68,11 +68,11 @@ ZNUMBER = 200     # Number of blocks in Z direction (NZ)
 
 [SEISMIC]
 # corrTest-miguel
-#FILENAME = ../inputData/sismica2.out     # Seismic file 
+#FILENAME = /home/data/inputData/sismica2.out     # Seismic file 
 # corrTest
-FILENAME = ../inputData/sismica1.out     # Seismic file 
+FILENAME = /home/data/inputData/sismica1.out     # Seismic file 
 # bigTest
-#FILENAME = ../inputData/sismica.out     # Seismic file 
+#FILENAME = /home/data/inputData/sismica.out     # Seismic file 
 
 
 [CORR]
@@ -95,16 +95,16 @@ AI                       = 0            # Dump acoustic impedance grid flag
 ##### Locations ans names of files to dump #####
 
 [FILENAME]
-PATH                    = ../corrTest-miguel/
-#SYNTH_DUMP_DIR          = ../corrTest-miguel/synth_dump/     #TODO: este ficheiro ja' nao e' usado!
+PATH                    = /home/data/corrTest-miguel/
+#SYNTH_DUMP_DIR          = /home/data/corrTest-miguel/synth_dump/     #TODO: este ficheiro ja' nao e' usado!
 SYNTH_DUMP              = SY_Simul
 SYNTH_DUMP_SUFIX        = .out
-CORR_DUMP_DIR           = ../corrTest-miguel/corr_dump/
+CORR_DUMP_DIR           = /home/data/corrTest-miguel/corr_dump/
 CORR_DUMP               = CORR_Simul
 CORR_DUMP_SUFIX         = .out
-BCM                     = ../corrTest-miguel/BCM
-BAI                     = ../corrTest-miguel/BAI
-BEST_CUBES_DIR          = ../corrTest-miguel/best_cubes/
+BCM                     = /home/data/corrTest-miguel/BCM
+BAI                     = /home/data/corrTest-miguel/BAI
+BEST_CUBES_DIR          = /home/data/corrTest-miguel/best_cubes/
 BEST_GLOBAL_CORR        = Best_Global_Corr_Cube_Simul
 BEST_GLOBAL_CORR_SUFIX  = .out
 BEST_GLOBAL_AI          = Best_Global_AI_Cube_Simul
@@ -113,8 +113,8 @@ BEST_SECTION_CORR       = Best_Section_Corr_Cube_Simul
 BEST_SECTION_CORR_SUFIX = .out
 BEST_SECTION_AI         = Best_Section_AI_Cube_Simul
 BEST_SECTION_AI_SUFIX   = .out
-TEMP_DIR                = ../corrTest-miguel/temp/
-GLOBAL_LOG_DIR          = ../corrTest-miguel/logs/
+TEMP_DIR                = /home/data/corrTest-miguel/temp/
+GLOBAL_LOG_DIR          = /home/data/corrTest-miguel/logs/
 
 
 ##### BCM & BAI Initial values ##### 
@@ -134,7 +134,7 @@ BAI = 0
 ##### Wavelet Parameters #####
 
 [WAVELET]
-FILENAME = ../inputData/Wavelet.prn     # Wavelet file 
+FILENAME = /home/data/inputData/Wavelet.prn     # Wavelet file 
 USED_VALUES = 64                             # Size of wavelet -1
 SPOTS = 32                                   # (not usable)
 
@@ -149,7 +149,7 @@ SPOTS = 32                                   # (not usable)
 ##### Hard Data Parameters #####
 
 [HARDDATA]
-FILENAME = ../inputData/Wells.prn     # Hard Data file 
+FILENAME = /home/data/inputData/Wells.prn     # Hard Data file 
 NVARI    = 4                               # Number of columns in the data file (to eliminate)
 IXL      = 1                               # Column number of X coordinate
 IYL      = 2                               # Column number of Y coordinate
@@ -205,7 +205,7 @@ ZCOORD = 1418      # Coordinate in Z axis of the first block (ZMN)
 [MASK]
 NULL_VALUE = -99999.25                      # Null value (NOSVALUE)
 USE_MASK   = 0                              # Use of mask flag (IMASK)
-FILENAME   = ../inputData/Mask.dat     # Mask file 
+FILENAME   = /home/data/inputData/Mask.dat     # Mask file 
 
 
 ##### Search Parameters #####
@@ -260,7 +260,7 @@ AA   = 220    # Maximum horizontal range (AA(i))
 AA1  = 60     # Minimum horizontal range (AA1) 
 AA2  = 12     # Vertical range (AA2) 
 
-[VARIOGRAM2]
+#[VARIOGRAM2]
 #TYPE= "[1]COV + [2]COV + NUGGET = 1.0"
 #COV=
 #ANG1=
