--- a/tsi.conf
+++ b/tsi.conf
@@ -53,13 +53,13 @@ OPTIMIZE = 0
 
 [GRID]
 # corrTest-miguel
-#XNUMBER = 19      # Number of blocks in X direction (NX)
-#YNUMBER = 19      # Number of blocks in Y direction (NY)
-#ZNUMBER = 200     # Number of blocks in Z direction (NZ)
-# corrTest
-XNUMBER = 194      # Number of blocks in X direction (NX)
-YNUMBER = 192      # Number of blocks in Y direction (NY)
+XNUMBER = 19      # Number of blocks in X direction (NX)
+YNUMBER = 19      # Number of blocks in Y direction (NY)
 ZNUMBER = 200     # Number of blocks in Z direction (NZ)
+# corrTest
+#XNUMBER = 194      # Number of blocks in X direction (NX)
+#YNUMBER = 192      # Number of blocks in Y direction (NY)
+#ZNUMBER = 200     # Number of blocks in Z direction (NZ)
 # bigTest
 #XNUMBER = 300      # Number of blocks in X direction (NX)
 #YNUMBER = 300      # Number of blocks in Y direction (NY)
@@ -68,11 +68,11 @@ ZNUMBER = 200     # Number of blocks in Z direction (NZ)
 
 [SEISMIC]
 # corrTest-miguel
-#FILENAME = /home/data/inputData/sismica2.out     # Seismic file 
+FILENAME = /home/data/input/sismica2.out     # Seismic file 
 # corrTest
-FILENAME = /home/data/inputData/sismica1.out     # Seismic file 
+#FILENAME = /home/data/input/sismica1.out     # Seismic file 
 # bigTest
-#FILENAME = /home/data/inputData/sismica.out     # Seismic file 
+#FILENAME = /home/data/input/sismica.out     # Seismic file 
 
 
 [CORR]
@@ -95,16 +95,16 @@ AI                       = 0            # Dump acoustic impedance grid flag
 ##### Locations ans names of files to dump #####
 
 [FILENAME]
-PATH                    = /home/data/corrTest-miguel/
-#SYNTH_DUMP_DIR          = /home/data/corrTest-miguel/synth_dump/     #TODO: este ficheiro ja' nao e' usado!
+PATH                    = /home/data/output/
+#SYNTH_DUMP_DIR          = /home/data/output/synth_dump/     #TODO: este ficheiro ja' nao e' usado!
 SYNTH_DUMP              = SY_Simul
 SYNTH_DUMP_SUFIX        = .out
-CORR_DUMP_DIR           = /home/data/corrTest-miguel/corr_dump/
+CORR_DUMP_DIR           = /home/data/output/corr_dump/
 CORR_DUMP               = CORR_Simul
 CORR_DUMP_SUFIX         = .out
-BCM                     = /home/data/corrTest-miguel/BCM
-BAI                     = /home/data/corrTest-miguel/BAI
-BEST_CUBES_DIR          = /home/data/corrTest-miguel/best_cubes/
+BCM                     = /home/data/output/BCM
+BAI                     = /home/data/ouput/BAI
+BEST_CUBES_DIR          = /home/data/output/best_cubes/
 BEST_GLOBAL_CORR        = Best_Global_Corr_Cube_Simul
 BEST_GLOBAL_CORR_SUFIX  = .out
 BEST_GLOBAL_AI          = Best_Global_AI_Cube_Simul
@@ -113,8 +113,8 @@ BEST_SECTION_CORR       = Best_Section_Corr_Cube_Simul
 BEST_SECTION_CORR_SUFIX = .out
 BEST_SECTION_AI         = Best_Section_AI_Cube_Simul
 BEST_SECTION_AI_SUFIX   = .out
-TEMP_DIR                = /home/data/corrTest-miguel/temp/
-GLOBAL_LOG_DIR          = /home/data/corrTest-miguel/logs/
+TEMP_DIR                = /home/data/output/temp/
+GLOBAL_LOG_DIR          = /home/data/output/logs/
 
 
 ##### BCM & BAI Initial values ##### 
@@ -134,7 +134,7 @@ BAI = 0
 ##### Wavelet Parameters #####
 
 [WAVELET]
-FILENAME = /home/data/inputData/Wavelet.prn     # Wavelet file 
+FILENAME = /home/data/input/Wavelet.prn     # Wavelet file 
 USED_VALUES = 64                             # Size of wavelet -1
 SPOTS = 32                                   # (not usable)
 
@@ -149,7 +149,7 @@ SPOTS = 32                                   # (not usable)
 ##### Hard Data Parameters #####
 
 [HARDDATA]
-FILENAME = /home/data/inputData/Wells.prn     # Hard Data file 
+FILENAME = /home/data/input/Wells.prn     # Hard Data file 
 NVARI    = 4                               # Number of columns in the data file (to eliminate)
 IXL      = 1                               # Column number of X coordinate
 IYL      = 2                               # Column number of Y coordinate
@@ -205,7 +205,7 @@ ZCOORD = 1418      # Coordinate in Z axis of the first block (ZMN)
 [MASK]
 NULL_VALUE = -99999.25                      # Null value (NOSVALUE)
 USE_MASK   = 0                              # Use of mask flag (IMASK)
-FILENAME   = /home/data/inputData/Mask.dat     # Mask file 
+FILENAME   = /home/data/input/Mask.dat     # Mask file 
 
 
 ##### Search Parameters #####
