--- a/tsi.conf
+++ b/tsi.conf
@@ -8,12 +8,12 @@
 # The global parameter ITERATIONS sets the number of iterations the TSI.
 # A higher number yields a higher correlation result. There's no default
 # value. This is a mandatory parameter.
-ITERATIONS = 2
+ITERATIONS = 1
 
 # The global parameter SIMULATIONS set the number o simulations that will
 # be executed for each iteration of the TSI. A higher number yields a higher
 # correlation result. This is a mandatory parameter.
-SIMULATIONS = 2
+SIMULATIONS = 1
 
 # The global parameter OPTIMIZE applies only to parallel execution of the
 # program. If this parameter is set to 1 (default), the program will try
@@ -23,6 +23,10 @@ SIMULATIONS = 2
 # the execution. It might be useful to set this parameter to false to access
 # more memory on the cluster.
 OPTIMIZE = 0
+
+# The global flag VERBOSE controls the output of messages to the standard
+# output device. The default value is 1 (true).
+#VERBOSE = 1
 
 
 [HEAP]
@@ -52,25 +56,34 @@ OPTIMIZE = 0
 
 
 [GRID]
-# corrTest-miguel
-XNUMBER = 19      # Number of blocks in X direction (NX)
-YNUMBER = 19      # Number of blocks in Y direction (NY)
-ZNUMBER = 200     # Number of blocks in Z direction (NZ)
-# corrTest
-#XNUMBER = 194      # Number of blocks in X direction (NX)
-#YNUMBER = 192      # Number of blocks in Y direction (NY)
+# smallTest
+#XNUMBER = 19      # Number of blocks in X direction (NX)
+#YNUMBER = 19      # Number of blocks in Y direction (NY)
 #ZNUMBER = 200     # Number of blocks in Z direction (NZ)
+# corrTest
+XNUMBER = 194      # Number of blocks in X direction (NX)
+YNUMBER = 192      # Number of blocks in Y direction (NY)
+ZNUMBER = 200     # Number of blocks in Z direction (NZ)
 # bigTest
 #XNUMBER = 300      # Number of blocks in X direction (NX)
 #YNUMBER = 300      # Number of blocks in Y direction (NY)
 #ZNUMBER = 320     # Number of blocks in Z direction (NZ)
 
+# smallTest/corrTest
+XCOORD = 10403     # Coordinate in X axis of the first block (XMN)
+YCOORD = 4159      # Coordinate in Y axis of the first block (YMN)
+ZCOORD = 1418      # Coordinate in Z axis of the first block (ZMN)
+# bigTest
+#XCOORD = 10403     # Coordinate in X axis of the first block (XMN)
+#YCOORD = 4000      # Coordinate in Y axis of the first block (YMN)
+#ZCOORD = 1299      # Coordinate in Z axis of the first block (ZMN)
+
 
 [SEISMIC]
 # corrTest-miguel
-FILENAME = /home/data/input/sismica2.out     # Seismic file 
+#FILENAME = /home/data/input/sismica2.out     # Seismic file 
 # corrTest
-#FILENAME = /home/data/input/sismica1.out     # Seismic file 
+FILENAME = /home/data/input/sismica1.out     # Seismic file 
 # bigTest
 #FILENAME = /home/data/input/sismica.out     # Seismic file 
 
@@ -134,7 +147,7 @@ BAI = 0
 ##### Wavelet Parameters #####
 
 [WAVELET]
-FILENAME = /home/data/input/Wavelet.prn     # Wavelet file 
+FILENAME = /home/data/input/Wavelet.prn      # Wavelet file 
 USED_VALUES = 64                             # Size of wavelet -1
 SPOTS = 32                                   # (not usable)
 
@@ -149,7 +162,7 @@ SPOTS = 32                                   # (not usable)
 ##### Hard Data Parameters #####
 
 [HARDDATA]
-FILENAME = /home/data/input/Wells.prn     # Hard Data file 
+FILENAME = /home/data/input/Wells.prn      # Hard Data file 
 NVARI    = 4                               # Number of columns in the data file (to eliminate)
 IXL      = 1                               # Column number of X coordinate
 IYL      = 2                               # Column number of Y coordinate
@@ -190,14 +203,6 @@ ICMEAN = 1     # Average correction flag
 XSIZE  = 1         # Block size in X axis (XSIZ)
 YSIZE  = 3         # Block size in Y axis (YSIZ)
 ZSIZE  = 1         # Block size in Z axis (ZSIZ)
-# smallTest/corrTest
-XCOORD = 10403     # Coordinate in X axis of the first block (XMN)
-YCOORD = 4159      # Coordinate in Y axis of the first block (YMN)
-ZCOORD = 1418      # Coordinate in Z axis of the first block (ZMN)
-# bigTest
-#XCOORD = 10403     # Coordinate in X axis of the first block (XMN)
-#YCOORD = 4000      # Coordinate in Y axis of the first block (YMN)
-#ZCOORD = 1299      # Coordinate in Z axis of the first block (ZMN)
 
 
 ##### Mask and null values #####
@@ -205,7 +210,7 @@ ZCOORD = 1418      # Coordinate in Z axis of the first block (ZMN)
 [MASK]
 NULL_VALUE = -99999.25                      # Null value (NOSVALUE)
 USE_MASK   = 0                              # Use of mask flag (IMASK)
-FILENAME   = /home/data/input/Mask.dat     # Mask file 
+FILENAME   = /home/data/input/Mask.dat      # Mask file 
 
 
 ##### Search Parameters #####
