--- a/tsi.conf
+++ b/tsi.conf
@@ -24,9 +24,26 @@ SIMULATIONS = 1
 # more memory on the cluster.
 OPTIMIZE = 0
 
+# The global flag MIDDLEZERO controls the node that will be considered to be
+# root node during parallel execution. If the flag is set to 1 (true), node
+# 0 will be considered the root node. If the flag is set to 0 (false) the
+# root node will process number ((number_of_processes)/2). This flag may
+# provide some additional effiency during the communication stages of the
+# program, depending on the MPI implementation and cluster network topology.
+# This flag has no effect on SMP environments. The default value is 0 (false).
+#MIDDLEZERO = 0
+
 # The global flag VERBOSE controls the output of messages to the standard
 # output device. The default value is 1 (true).
 #VERBOSE = 1
+
+# The global INPUT_PATH parameter sets the path for input files. If no value
+# is supplied, the current path will be used to search for files.
+INPUT_PATH = /home/data/input/
+
+# The global OUTPUT_PATH parameter sets the path for input files. If no value
+# is supplied, the current path will be used to write files.
+OUTPUT_PATH = /home/data/output/
 
 
 [HEAP]
@@ -52,9 +69,10 @@ OPTIMIZE = 0
 
 # The heap PATH parameters sets the path to the location where the swap
 # files will bw stored. The default value is "/tmp/"
-#PATH = /tmp/
+#TMP_PATH = /tmp/
 
-
+###############################################################################
+###############################################################################
 [GRID]
 # smallTest
 #XNUMBER = 19      # Number of blocks in X direction (NX)
@@ -80,34 +98,29 @@ ZCOORD = 1418      # Coordinate in Z axis of the first block (ZMN)
 
 
 [SEISMIC]
-# corrTest-miguel
-#FILENAME = /home/data/input/sismica2.out     # Seismic file 
-# corrTest
-FILENAME = /home/data/input/sismica1.out     # Seismic file 
-# bigTest
-#FILENAME = /home/data/input/sismica.out     # Seismic file 
+# The PATH parameter sets the path that will be appended to the filename
+# of the seismic file. If no parameter is supplied, the global parameter
+# INPUT_PATH will be used.
+#PATH =
+
+# The FILENAME parameter sets the name for the file with the seismic data.
+#FILENAME = /home/data/input/sismica2.out    # smallTest
+FILENAME = /home/data/input/sismica1.out    # corrTest 
+#FILENAME = /home/data/input/sismica.out     # bigTest
+
+###############################################################################
+###############################################################################
 
 
-[CORR]
-LAYERS_MIN     = 4        # minimum number of layers
-LAYER_SIZE_MIN = 25       # minimum size of a layer
-BCM_ROOT = 1              # Correlation parameters???
+##### Locations and names of files to dump #####
 
-
-##### Dump Parameters #####
-
-[DUMP]
+[FILES]
 DUMP_DOUBLE_VALUE_FORMAT = %.4Lf\\n     # Format of values to write
 SYNTH                    = 0            # Dump synthetic grid flag
 CORR                     = 0            # Dump correlations grid flag
 BAI                      = 0            # Dump best acoustic impedance grid flag
 BCM                      = 0            # Dump best correlations grid flag
 AI                       = 0            # Dump acoustic impedance grid flag
-
-
-##### Locations ans names of files to dump #####
-
-[FILENAME]
 PATH                    = /home/data/output/
 #SYNTH_DUMP_DIR          = /home/data/output/synth_dump/     #TODO: este ficheiro ja' nao e' usado!
 SYNTH_DUMP              = SY_Simul
@@ -147,9 +160,34 @@ BAI = 0
 ##### Wavelet Parameters #####
 
 [WAVELET]
-FILENAME = /home/data/input/Wavelet.prn      # Wavelet file 
-USED_VALUES = 64                             # Size of wavelet -1
-SPOTS = 32                                   # (not usable)
+# The PATH parameter sets the path that will be appended to the filename
+# of the wavelet file. If no parameter is supplied, the global parameter
+# INPUT_PATH will be used.
+#PATH =
+
+# The FILENAME parameter sets the name for the file with the wavelet data.
+FILENAME = /home/data/input/Wavelet.prn
+
+USED_VALUES = 64    # Size of wavelet -1
+SPOTS = 32          # (not usable)
+
+
+[CORR]
+BCM_ROOT = 1        # Correlation parameters???
+
+# The flag RANDOM_LAYERS enables the randomization of the size of the
+# correlation vectors used to decide which AI vectors are selected for the
+# next iteration. The default value is 1 (true).
+#RANDOM_LAYERS = 1
+
+# The parameter LAYERS_MIN set the minimum number of layers to use when
+# spliting a grid. If RANDOM_LAYERS is set to 0 (false), LAYERS_MIN will
+# be used to set the fixed number of layers to be used.
+LAYERS_MIN = 4
+
+# The parameter LAYERS_MIN sets the minimum number of points to be used
+# for a grid layer.
+LAYER_SIZE_MIN = 25
 
 
 
