--- a/tsi.conf
+++ b/tsi.conf
@@ -24,18 +24,19 @@ SIMULATIONS = 1
 # more memory on the cluster.
 OPTIMIZE = 0
 
-# The global flag MIDDLEZERO controls the node that will be considered to be
+# The global flag MIDDLEZERO controls the node that will be considered the
 # root node during parallel execution. If the flag is set to 1 (true), node
 # 0 will be considered the root node. If the flag is set to 0 (false) the
-# root node will process number ((number_of_processes)/2). This flag may
+# root node will process number (number_of_processes / 2). This flag may
 # provide some additional effiency during the communication stages of the
 # program, depending on the MPI implementation and cluster network topology.
-# This flag has no effect on SMP environments. The default value is 0 (false).
+# This flag should have no effect on SMP systems. The default value is 0
+# (false).
 #MIDDLEZERO = 0
 
 # The global flag VERBOSE controls the output of messages to the standard
-# output device. The default value is 1 (true).
-#VERBOSE = 1
+# output device. The default value is 0 (false).
+VERBOSE = 1
 
 # The global INPUT_PATH parameter sets the path for input files. If no value
 # is supplied, the current path will be used to search for files.
@@ -44,6 +45,10 @@ INPUT_PATH = /home/data/input/
 # The global OUTPUT_PATH parameter sets the path for input files. If no value
 # is supplied, the current path will be used to write files.
 OUTPUT_PATH = /home/data/output/
+
+# The global LOG_PATH parameter sets the path for the log files. If no value
+# is supplied, the current path will be used to write logs.
+LOG_PATH = /home/data/output/logs/
 
 
 [HEAP]
@@ -71,8 +76,8 @@ OUTPUT_PATH = /home/data/output/
 # files will bw stored. The default value is "/tmp/"
 #TMP_PATH = /tmp/
 
-###############################################################################
-###############################################################################
+########################################################################
+########################################################################
 [GRID]
 # smallTest
 #XNUMBER = 19      # Number of blocks in X direction (NX)
@@ -81,11 +86,11 @@ OUTPUT_PATH = /home/data/output/
 # corrTest
 XNUMBER = 194      # Number of blocks in X direction (NX)
 YNUMBER = 192      # Number of blocks in Y direction (NY)
-ZNUMBER = 200     # Number of blocks in Z direction (NZ)
+ZNUMBER = 200      # Number of blocks in Z direction (NZ)
 # bigTest
 #XNUMBER = 300      # Number of blocks in X direction (NX)
 #YNUMBER = 300      # Number of blocks in Y direction (NY)
-#ZNUMBER = 320     # Number of blocks in Z direction (NZ)
+#ZNUMBER = 320      # Number of blocks in Z direction (NZ)
 
 # smallTest/corrTest
 XCOORD = 10403     # Coordinate in X axis of the first block (XMN)
@@ -103,13 +108,21 @@ ZCOORD = 1418      # Coordinate in Z axis of the first block (ZMN)
 # INPUT_PATH will be used.
 #PATH =
 
-# The FILENAME parameter sets the name for the file with the seismic data.
-#FILENAME = /home/data/input/sismica2.out    # smallTest
-FILENAME = /home/data/input/sismica1.out    # corrTest 
-#FILENAME = /home/data/input/sismica.out     # bigTest
+# The FILENAME parameter sets the name for the file with the seismic
+# data.
+#FILENAME = /home/data/input/Seismic-19x19x200.out
+FILENAME = /home/data/input/Seismic-194x192x200.out
+#FILENAME = /home/data/input/Seismic-300x300x320.out
 
-###############################################################################
-###############################################################################
+# The BIN_FILE parameter sets the name for the file with the seismic
+# data in binary format. If this parameter is set, this file will be
+# used instead of the text file set in FILENAME.
+#BIN_FILE = /home/data/input/Seismic-19x19x200.bin
+BIN_FILE = /home/data/input/Seismic-194x192x200.bin
+#BIN_FILE = /home/data/input/Seismic-300x300x320.bin
+
+########################################################################
+########################################################################
 
 
 ##### Locations and names of files to dump #####
@@ -139,7 +152,6 @@ BEST_SECTION_CORR       = Best_Section_Corr_Cube_Simul
 BEST_SECTION_CORR_SUFIX = .out
 BEST_SECTION_AI         = Best_Section_AI_Cube_Simul
 BEST_SECTION_AI_SUFIX   = .out
-TEMP_DIR                = /home/data/output/temp/
 GLOBAL_LOG_DIR          = /home/data/output/logs/
 
 
