--- a/tsi.conf
+++ b/tsi.conf
@@ -8,12 +8,12 @@
 # The global parameter ITERATIONS sets the number of iterations the TSI.
 # A higher number yields a higher correlation result. There's no default
 # value. This is a mandatory parameter.
-ITERATIONS = 1
+ITERATIONS = 3
 
 # The global parameter SIMULATIONS set the number o simulations that will
 # be executed for each iteration of the TSI. A higher number yields a higher
 # correlation result. This is a mandatory parameter.
-SIMULATIONS = 1
+SIMULATIONS = 2
 
 # The global parameter OPTIMIZE applies only to parallel execution of the
 # program. If this parameter is set to 1 (default), the program will try
@@ -40,15 +40,15 @@ VERBOSE = 1
 
 # The global INPUT_PATH parameter sets the path for input files. If no value
 # is supplied, the current path will be used to search for files.
-INPUT_PATH = /home/data/input/
+INPUT_PATH = /home/data/data/input/
 
 # The global OUTPUT_PATH parameter sets the path for input files. If no value
 # is supplied, the current path will be used to write files.
-OUTPUT_PATH = /home/data/output/
+OUTPUT_PATH = /home/data/data/output/
 
 # The global LOG_PATH parameter sets the path for the log files. If no value
 # is supplied, the current path will be used to write logs.
-LOG_PATH = /home/data/output/logs/
+LOG_PATH = /home/data/data/output/logs/
 
 
 [HEAP]
@@ -111,7 +111,7 @@ ZCOORD = 1418      # Coordinate in Z axis of the first block (ZMN)
 # The FILENAME parameter sets the name for the file with the seismic
 # data.
 #FILENAME = /home/data/input/Seismic-19x19x200.out
-FILENAME = /home/data/input/Seismic-194x192x200.out
+FILENAME = /home/data/data/input/Seismic-194x192x200.out
 #FILENAME = /home/data/input/Seismic-300x300x320.out
 
 # The BIN_FILE parameter sets the name for the file with the seismic
@@ -134,16 +134,16 @@ CORR                     = 0            # Dump correlations grid flag
 BAI                      = 0            # Dump best acoustic impedance grid flag
 BCM                      = 0            # Dump best correlations grid flag
 AI                       = 0            # Dump acoustic impedance grid flag
-PATH                    = /home/data/output/
+PATH                    = /home/data/data/output/
 #SYNTH_DUMP_DIR          = /home/data/output/synth_dump/     #TODO: este ficheiro ja' nao e' usado!
 SYNTH_DUMP              = SY_Simul
 SYNTH_DUMP_SUFIX        = .out
-CORR_DUMP_DIR           = /home/data/output/corr_dump/
+CORR_DUMP_DIR           = /home/data/data/output/corr_dump/
 CORR_DUMP               = CORR_Simul
 CORR_DUMP_SUFIX         = .out
-BCM                     = /home/data/output/BCM
-BAI                     = /home/data/ouput/BAI
-BEST_CUBES_DIR          = /home/data/output/best_cubes/
+BCM                     = /home/data/data/output/BCM
+BAI                     = /home/data/data/ouput/BAI
+BEST_CUBES_DIR          = /home/data/data/output/best_cubes/
 BEST_GLOBAL_CORR        = Best_Global_Corr_Cube_Simul
 BEST_GLOBAL_CORR_SUFIX  = .out
 BEST_GLOBAL_AI          = Best_Global_AI_Cube_Simul
@@ -152,7 +152,7 @@ BEST_SECTION_CORR       = Best_Section_Corr_Cube_Simul
 BEST_SECTION_CORR_SUFIX = .out
 BEST_SECTION_AI         = Best_Section_AI_Cube_Simul
 BEST_SECTION_AI_SUFIX   = .out
-GLOBAL_LOG_DIR          = /home/data/output/logs/
+GLOBAL_LOG_DIR          = /home/data/data/output/logs/
 
 
 ##### BCM & BAI Initial values ##### 
@@ -178,7 +178,7 @@ BAI = 0
 #PATH =
 
 # The FILENAME parameter sets the name for the file with the wavelet data.
-FILENAME = /home/data/input/Wavelet.prn
+FILENAME = /home/data/data/input/Wavelet.prn
 
 USED_VALUES = 64    # Size of wavelet -1
 SPOTS = 32          # (not usable)
@@ -212,7 +212,7 @@ LAYER_SIZE_MIN = 25
 ##### Hard Data Parameters #####
 
 [HARDDATA]
-FILENAME = /home/data/input/Wells.prn      # Hard Data file 
+FILENAME = /home/data/data/input/Wells.prn      # Hard Data file 
 NVARI    = 4                               # Number of columns in the data file (to eliminate)
 IXL      = 1                               # Column number of X coordinate
 IYL      = 2                               # Column number of Y coordinate
@@ -260,7 +260,7 @@ ZSIZE  = 1         # Block size in Z axis (ZSIZ)
 [MASK]
 NULL_VALUE = -99999.25                      # Null value (NOSVALUE)
 USE_MASK   = 0                              # Use of mask flag (IMASK)
-FILENAME   = /home/data/input/Mask.dat      # Mask file 
+FILENAME   = /home/data/data/input/Mask.dat      # Mask file 
 
 
 ##### Search Parameters #####
