[svn] revamp da tsi

--- a/tsi.conf
+++ b/tsi.conf
@@ -38,6 +38,11 @@ OPTIMIZE = 0
 # output device. The default value is 0 (false).
 VERBOSE = 1
 
+# The global RESUME parameter sets the flag that enables the ability to resume
+# the execution from the recorded data on the dump path. The default value is
+# 0 (false).
+#RESUME = 0
+
 # The global INPUT_PATH parameter sets the path for input files. If no value
 # is supplied, the current path will be used to search for files.
 INPUT_PATH = /home/data/data/input/
@@ -80,13 +85,13 @@ LOG_PATH = /home/data/data/output/logs/
 ########################################################################
 [GRID]
 # smallTest
-#XNUMBER = 19      # Number of blocks in X direction (NX)
-#YNUMBER = 19      # Number of blocks in Y direction (NY)
-#ZNUMBER = 200     # Number of blocks in Z direction (NZ)
+XNUMBER = 19      # Number of blocks in X direction (NX)
+YNUMBER = 19      # Number of blocks in Y direction (NY)
+ZNUMBER = 200     # Number of blocks in Z direction (NZ)
 # corrTest
-XNUMBER = 194      # Number of blocks in X direction (NX)
-YNUMBER = 192      # Number of blocks in Y direction (NY)
-ZNUMBER = 200      # Number of blocks in Z direction (NZ)
+#XNUMBER = 194      # Number of blocks in X direction (NX)
+#YNUMBER = 192      # Number of blocks in Y direction (NY)
+#ZNUMBER = 200      # Number of blocks in Z direction (NZ)
 # bigTest
 #XNUMBER = 300      # Number of blocks in X direction (NX)
 #YNUMBER = 300      # Number of blocks in Y direction (NY)
@@ -110,15 +115,15 @@ ZCOORD = 1418      # Coordinate in Z axis of the first block (ZMN)
 
 # The FILENAME parameter sets the name for the file with the seismic
 # data.
-#FILENAME = /home/data/input/Seismic-19x19x200.out
-FILENAME = /home/data/data/input/Seismic-194x192x200.out
+FILENAME = /home/data/input/Seismic-19x19x200.out
+#FILENAME = /home/data/data/input/Seismic-194x192x200.out
 #FILENAME = /home/data/input/Seismic-300x300x320.out
 
 # The BIN_FILE parameter sets the name for the file with the seismic
 # data in binary format. If this parameter is set, this file will be
 # used instead of the text file set in FILENAME.
-#BIN_FILE = /home/data/input/Seismic-19x19x200.bin
-BIN_FILE = /home/data/input/Seismic-194x192x200.bin
+BIN_FILE = /home/data/input/Seismic-19x19x200.bin
+#BIN_FILE = /home/data/input/Seismic-194x192x200.bin
 #BIN_FILE = /home/data/input/Seismic-300x300x320.bin
 
 ########################################################################
@@ -127,32 +132,24 @@ BIN_FILE = /home/data/input/Seismic-194x192x200.bin
 
 ##### Locations and names of files to dump #####
 
-[FILES]
+[DUMP]
+# Flags for dumping temporary grid data during execution. The default value
+# is 0 (false). If the RESUME flag is set to 1 (true) all dump flags will
+# be enabled automatically.
+#BAI   = 0            # Dump best acoustic impedance grid
+#BCM   = 0            # Dump best correlations grid
+#AI    = 0            # Dump acoustic impedance grid
+#CORR  = 0            # Dump correlations grid
+#SYNTH = 0            # Dump synthetic grid
+#RCOEF = 0            # Dump reflection coefficients grid
+
+# The PATH parameter sets the path that will be appended to the filenames
+# of the dump files. If no parameter is supplied, the global parameter
+# OUTPUT_PATH will be used. Dump filenames have the format:
+# [node].[iteration].[simulation].[grid_type].out
+#PATH =
+
 DUMP_DOUBLE_VALUE_FORMAT = %.4Lf\\n     # Format of values to write
-SYNTH                    = 0            # Dump synthetic grid flag
-CORR                     = 0            # Dump correlations grid flag
-BAI                      = 0            # Dump best acoustic impedance grid flag
-BCM                      = 0            # Dump best correlations grid flag
-AI                       = 0            # Dump acoustic impedance grid flag
-PATH                    = /home/data/data/output/
-#SYNTH_DUMP_DIR          = /home/data/output/synth_dump/     #TODO: este ficheiro ja' nao e' usado!
-SYNTH_DUMP              = SY_Simul
-SYNTH_DUMP_SUFIX        = .out
-CORR_DUMP_DIR           = /home/data/data/output/corr_dump/
-CORR_DUMP               = CORR_Simul
-CORR_DUMP_SUFIX         = .out
-BCM                     = /home/data/data/output/BCM
-BAI                     = /home/data/data/ouput/BAI
-BEST_CUBES_DIR          = /home/data/data/output/best_cubes/
-BEST_GLOBAL_CORR        = Best_Global_Corr_Cube_Simul
-BEST_GLOBAL_CORR_SUFIX  = .out
-BEST_GLOBAL_AI          = Best_Global_AI_Cube_Simul
-BEST_GLOBAL_AI_SUFIX    = .out
-BEST_SECTION_CORR       = Best_Section_Corr_Cube_Simul
-BEST_SECTION_CORR_SUFIX = .out
-BEST_SECTION_AI         = Best_Section_AI_Cube_Simul
-BEST_SECTION_AI_SUFIX   = .out
-GLOBAL_LOG_DIR          = /home/data/data/output/logs/
 
 
 ##### BCM & BAI Initial values ##### 
