--- a/tsi-mig.conf
+++ b/tsi-mig.conf
@@ -8,12 +8,12 @@
 # The global parameter ITERATIONS sets the number of iterations the TSI.
 # A higher number yields a higher correlation result. There's no default
 # value. This is a mandatory parameter.
-ITERATIONS = 1
+ITERATIONS = 3
 
 # The global parameter SIMULATIONS set the number o simulations that will
 # be executed for each iteration of the TSI. A higher number yields a higher
 # correlation result. This is a mandatory parameter.
-SIMULATIONS = 1
+SIMULATIONS = 4
 
 # The global parameter OPTIMIZE applies only to parallel execution of the
 # program. If this parameter is set to 1 (default), the program will try
@@ -23,6 +23,37 @@ SIMULATIONS = 1
 # the execution. It might be useful to set this parameter to false to access
 # more memory on the cluster.
 OPTIMIZE = 0
+
+# The global flag MIDDLEZERO controls the node that will be considered the
+# root node during parallel execution. If the flag is set to 1 (true), node
+# 0 will be considered the root node. If the flag is set to 0 (false) the
+# root node will process number (number_of_processes / 2). This flag may
+# provide some additional effiency during the communication stages of the
+# program, depending on the MPI implementation and cluster network topology.
+# This flag should have no effect on SMP systems. The default value is 0
+# (false).
+#MIDDLEZERO = 0
+
+# The global flag VERBOSE controls the output of messages to the standard
+# output device. The default value is 0 (false).
+VERBOSE = 1
+
+# The global RESUME parameter sets the flag that enables the ability to resume
+# the execution from the recorded data on the dump path. The default value is
+# 0 (false).
+#RESUME = 0
+
+# The global INPUT_PATH parameter sets the path for input files. If no value
+# is supplied, the current path will be used to search for files.
+INPUT_PATH = /home/data/input/
+
+# The global OUTPUT_PATH parameter sets the path for input files. If no value
+# is supplied, the current path will be used to write files.
+OUTPUT_PATH = /home/data/miguel-output/
+
+# The global LOG_PATH parameter sets the path for the log files. If no value
+# is supplied, the current path will be used to write logs.
+LOG_PATH = /home/data/miguel-output/logs/
 
 
 [HEAP]
@@ -48,73 +79,77 @@ OPTIMIZE = 0
 
 # The heap PATH parameters sets the path to the location where the swap
 # files will bw stored. The default value is "/tmp/"
-#PATH = /tmp/
+#TMP_PATH = /tmp/
 
-
+########################################################################
+########################################################################
 [GRID]
-# corrTest-miguel
-#XNUMBER = 19      # Number of blocks in X direction (NX)
-#YNUMBER = 19      # Number of blocks in Y direction (NY)
-#ZNUMBER = 200     # Number of blocks in Z direction (NZ)
-# corrTest
-XNUMBER = 194      # Number of blocks in X direction (NX)
-YNUMBER = 192      # Number of blocks in Y direction (NY)
+# smallTest
+XNUMBER = 19      # Number of blocks in X direction (NX)
+YNUMBER = 19      # Number of blocks in Y direction (NY)
 ZNUMBER = 200     # Number of blocks in Z direction (NZ)
+# corrTest
+#XNUMBER = 194      # Number of blocks in X direction (NX)
+#YNUMBER = 192      # Number of blocks in Y direction (NY)
+#ZNUMBER = 200      # Number of blocks in Z direction (NZ)
 # bigTest
 #XNUMBER = 300      # Number of blocks in X direction (NX)
 #YNUMBER = 300      # Number of blocks in Y direction (NY)
-#ZNUMBER = 320     # Number of blocks in Z direction (NZ)
+#ZNUMBER = 320      # Number of blocks in Z direction (NZ)
+
+# smallTest/corrTest
+XCOORD = 10403     # Coordinate in X axis of the first block (XMN)
+YCOORD = 4159      # Coordinate in Y axis of the first block (YMN)
+ZCOORD = 1418      # Coordinate in Z axis of the first block (ZMN)
+# bigTest
+#XCOORD = 10403     # Coordinate in X axis of the first block (XMN)
+#YCOORD = 4000      # Coordinate in Y axis of the first block (YMN)
+#ZCOORD = 1299      # Coordinate in Z axis of the first block (ZMN)
 
 
 [SEISMIC]
-# corrTest-miguel
-#FILENAME = ../inputData/sismica2.out     # Seismic file 
-# corrTest
-FILENAME = ../inputData/sismica1.out     # Seismic file 
-# bigTest
-#FILENAME = ../inputData/sismica.out     # Seismic file 
+# The PATH parameter sets the path that will be appended to the filename
+# of the seismic file. If no parameter is supplied, the global parameter
+# INPUT_PATH will be used.
+#PATH =
+
+# The FILENAME parameter sets the name for the file with the seismic
+# data.
+#FILENAME = /home/data/input/Seismic-19x19x200.out
+FILENAME = /home/data/input/Seismic-194x192x200.out
+#FILENAME = /home/data/input/Seismic-300x300x320.out
+
+# The BIN_FILE parameter sets the name for the file with the seismic
+# data in binary format. If this parameter is set, this file will be
+# used instead of the text file set in FILENAME.
+#BIN_FILE = /home/data/input/Seismic-19x19x200.bin
+BIN_FILE = /home/data/input/Seismic-194x192x200.bin
+#BIN_FILE = /home/data/input/Seismic-300x300x320.bin
+
+########################################################################
+########################################################################
 
 
-[CORR]
-LAYERS_MIN     = 4        # minimum number of layers
-LAYER_SIZE_MIN = 25       # minimum size of a layer
-BCM_ROOT = 1              # Correlation parameters???
-
-
-##### Dump Parameters #####
+##### Locations and names of files to dump #####
 
 [DUMP]
+# Flags for dumping temporary grid data during execution. The default value
+# is 0 (false). If the RESUME flag is set to 1 (true) all dump flags will
+# be enabled automatically.
+#BAI   = 0            # Dump best acoustic impedance grid
+#BCM   = 0            # Dump best correlations grid
+#AI    = 0            # Dump acoustic impedance grid
+#CORR  = 0            # Dump correlations grid
+#SYNTH = 0            # Dump synthetic grid
+#RCOEF = 0            # Dump reflection coefficients grid
+
+# The PATH parameter sets the path that will be appended to the filenames
+# of the dump files. If no parameter is supplied, the global parameter
+# OUTPUT_PATH will be used. Dump filenames have the format:
+# [node].[iteration].[simulation].[grid_type].out
+#PATH =
+
 DUMP_DOUBLE_VALUE_FORMAT = %.4Lf\\n     # Format of values to write
-SYNTH                    = 0            # Dump synthetic grid flag
-CORR                     = 0            # Dump correlations grid flag
-BAI                      = 0            # Dump best acoustic impedance grid flag
-BCM                      = 0            # Dump best correlations grid flag
-AI                       = 0            # Dump acoustic impedance grid flag
-
-
-##### Locations ans names of files to dump #####
-
-[FILENAME]
-PATH                    = ../corrTest-miguel/
-#SYNTH_DUMP_DIR          = ../corrTest-miguel/synth_dump/     #TODO: este ficheiro ja' nao e' usado!
-SYNTH_DUMP              = SY_Simul
-SYNTH_DUMP_SUFIX        = .out
-CORR_DUMP_DIR           = ../corrTest-miguel/corr_dump/
-CORR_DUMP               = CORR_Simul
-CORR_DUMP_SUFIX         = .out
-BCM                     = ../corrTest-miguel/BCM
-BAI                     = ../corrTest-miguel/BAI
-BEST_CUBES_DIR          = ../corrTest-miguel/best_cubes/
-BEST_GLOBAL_CORR        = Best_Global_Corr_Cube_Simul
-BEST_GLOBAL_CORR_SUFIX  = .out
-BEST_GLOBAL_AI          = Best_Global_AI_Cube_Simul
-BEST_GLOBAL_AI_SUFIX    = .out
-BEST_SECTION_CORR       = Best_Section_Corr_Cube_Simul
-BEST_SECTION_CORR_SUFIX = .out
-BEST_SECTION_AI         = Best_Section_AI_Cube_Simul
-BEST_SECTION_AI_SUFIX   = .out
-TEMP_DIR                = ../corrTest-miguel/temp/
-GLOBAL_LOG_DIR          = ../corrTest-miguel/logs/
 
 
 ##### BCM & BAI Initial values ##### 
@@ -134,9 +169,34 @@ BAI = 0
 ##### Wavelet Parameters #####
 
 [WAVELET]
-FILENAME = ../inputData/Wavelet.prn     # Wavelet file 
-USED_VALUES = 64                             # Size of wavelet -1
-SPOTS = 32                                   # (not usable)
+# The PATH parameter sets the path that will be appended to the filename
+# of the wavelet file. If no parameter is supplied, the global parameter
+# INPUT_PATH will be used.
+#PATH =
+
+# The FILENAME parameter sets the name for the file with the wavelet data.
+FILENAME = /home/data/input/Wavelet.prn
+
+USED_VALUES = 64    # Size of wavelet -1
+SPOTS = 32          # (not usable)
+
+
+[CORR]
+BCM_ROOT = 1        # Correlation parameters???
+
+# The flag RANDOM_LAYERS enables the randomization of the size of the
+# correlation vectors used to decide which AI vectors are selected for the
+# next iteration. The default value is 1 (true).
+#RANDOM_LAYERS = 1
+
+# The parameter LAYERS_MIN set the minimum number of layers to use when
+# spliting a grid. If RANDOM_LAYERS is set to 0 (false), LAYERS_MIN will
+# be used to set the fixed number of layers to be used.
+LAYERS_MIN = 4
+
+# The parameter LAYERS_MIN sets the minimum number of points to be used
+# for a grid layer.
+LAYER_SIZE_MIN = 25
 
 
 
@@ -149,7 +209,7 @@ SPOTS = 32                                   # (not usable)
 ##### Hard Data Parameters #####
 
 [HARDDATA]
-FILENAME = ../inputData/Wells.prn     # Hard Data file 
+FILENAME = /home/data/input/Wells.prn      # Hard Data file 
 NVARI    = 4                               # Number of columns in the data file (to eliminate)
 IXL      = 1                               # Column number of X coordinate
 IYL      = 2                               # Column number of Y coordinate
@@ -190,14 +250,6 @@ ICMEAN = 1     # Average correction flag
 XSIZE  = 1         # Block size in X axis (XSIZ)
 YSIZE  = 3         # Block size in Y axis (YSIZ)
 ZSIZE  = 1         # Block size in Z axis (ZSIZ)
-# smallTest/corrTest
-XCOORD = 10403     # Coordinate in X axis of the first block (XMN)
-YCOORD = 4159      # Coordinate in Y axis of the first block (YMN)
-ZCOORD = 1418      # Coordinate in Z axis of the first block (ZMN)
-# bigTest
-#XCOORD = 10403     # Coordinate in X axis of the first block (XMN)
-#YCOORD = 4000      # Coordinate in Y axis of the first block (YMN)
-#ZCOORD = 1299      # Coordinate in Z axis of the first block (ZMN)
 
 
 ##### Mask and null values #####
@@ -205,7 +257,7 @@ ZCOORD = 1418      # Coordinate in Z axis of the first block (ZMN)
 [MASK]
 NULL_VALUE = -99999.25                      # Null value (NOSVALUE)
 USE_MASK   = 0                              # Use of mask flag (IMASK)
-FILENAME   = ../inputData/Mask.dat     # Mask file 
+FILENAME   = /home/data/input/Mask.dat      # Mask file 
 
 
 ##### Search Parameters #####
@@ -260,7 +312,7 @@ AA   = 220    # Maximum horizontal range (AA(i))
 AA1  = 60     # Minimum horizontal range (AA1) 
 AA2  = 12     # Vertical range (AA2) 
 
-[VARIOGRAM2]
+#[VARIOGRAM2]
 #TYPE= "[1]COV + [2]COV + NUGGET = 1.0"
 #COV=
 #ANG1=
