--- a/tsi.conf
+++ b/tsi.conf
@@ -8,12 +8,12 @@
 # The global parameter ITERATIONS sets the number of iterations the TSI.
 # A higher number yields a higher correlation result. There's no default
 # value. This is a mandatory parameter.
-ITERATIONS = 3
+ITERATIONS = 2
 
 # The global parameter SIMULATIONS set the number o simulations that will
 # be executed for each iteration of the TSI. A higher number yields a higher
 # correlation result. This is a mandatory parameter.
-SIMULATIONS = 2
+SIMULATIONS = 1
 
 # The global parameter OPTIMIZE applies only to parallel execution of the
 # program. If this parameter is set to 1 (default), the program will try
@@ -45,15 +45,15 @@ VERBOSE = 1
 
 # The global INPUT_PATH parameter sets the path for input files. If no value
 # is supplied, the current path will be used to search for files.
-INPUT_PATH = /home/data/data/input/
+INPUT_PATH = /home/data/input/
 
 # The global OUTPUT_PATH parameter sets the path for input files. If no value
 # is supplied, the current path will be used to write files.
-OUTPUT_PATH = /home/data/data/output/
+OUTPUT_PATH = /home/data/miguel-output/
 
 # The global LOG_PATH parameter sets the path for the log files. If no value
 # is supplied, the current path will be used to write logs.
-LOG_PATH = /home/data/data/output/logs/
+LOG_PATH = /home/data/miguel-output/logs/
 
 
 [HEAP]
@@ -85,13 +85,13 @@ LOG_PATH = /home/data/data/output/logs/
 ########################################################################
 [GRID]
 # smallTest
-XNUMBER = 19      # Number of blocks in X direction (NX)
-YNUMBER = 19      # Number of blocks in Y direction (NY)
-ZNUMBER = 200     # Number of blocks in Z direction (NZ)
+#XNUMBER = 19      # Number of blocks in X direction (NX)
+#YNUMBER = 19      # Number of blocks in Y direction (NY)
+#ZNUMBER = 200     # Number of blocks in Z direction (NZ)
 # corrTest
-#XNUMBER = 194      # Number of blocks in X direction (NX)
-#YNUMBER = 192      # Number of blocks in Y direction (NY)
-#ZNUMBER = 200      # Number of blocks in Z direction (NZ)
+XNUMBER = 194      # Number of blocks in X direction (NX)
+YNUMBER = 192      # Number of blocks in Y direction (NY)
+ZNUMBER = 200      # Number of blocks in Z direction (NZ)
 # bigTest
 #XNUMBER = 300      # Number of blocks in X direction (NX)
 #YNUMBER = 300      # Number of blocks in Y direction (NY)
@@ -115,16 +115,16 @@ ZCOORD = 1418      # Coordinate in Z axis of the first block (ZMN)
 
 # The FILENAME parameter sets the name for the file with the seismic
 # data.
-FILENAME = /home/data/input/Seismic-19x19x200.out
-#FILENAME = /home/data/data/input/Seismic-194x192x200.out
-#FILENAME = /home/data/input/Seismic-300x300x320.out
+#FILENAME = /home/data/input/seismic-19x19x200.out
+FILENAME = /home/data/input/seismic-194x192x200.out
+#FILENAME = /home/data/input/seismic-300x300x320.out
 
 # The BIN_FILE parameter sets the name for the file with the seismic
 # data in binary format. If this parameter is set, this file will be
 # used instead of the text file set in FILENAME.
-BIN_FILE = /home/data/input/Seismic-19x19x200.bin
-#BIN_FILE = /home/data/input/Seismic-194x192x200.bin
-#BIN_FILE = /home/data/input/Seismic-300x300x320.bin
+#BIN_FILE = /home/data/input/seismic-19x19x200.bin
+BIN_FILE = /home/data/input/seismic-194x192x200.bin
+#BIN_FILE = /home/data/input/seismic-300x300x320.bin
 
 ########################################################################
 ########################################################################
@@ -175,7 +175,7 @@ BAI = 0
 #PATH =
 
 # The FILENAME parameter sets the name for the file with the wavelet data.
-FILENAME = /home/data/data/input/Wavelet.prn
+FILENAME = /home/data/input/Wavelet.prn
 
 USED_VALUES = 64    # Size of wavelet -1
 SPOTS = 32          # (not usable)
@@ -209,7 +209,7 @@ LAYER_SIZE_MIN = 25
 ##### Hard Data Parameters #####
 
 [HARDDATA]
-FILENAME = /home/data/data/input/Wells.prn      # Hard Data file 
+FILENAME = /home/data/input/Wells.prn      # Hard Data file 
 NVARI    = 4                               # Number of columns in the data file (to eliminate)
 IXL      = 1                               # Column number of X coordinate
 IYL      = 2                               # Column number of Y coordinate
@@ -257,7 +257,7 @@ ZSIZE  = 1         # Block size in Z axis (ZSIZ)
 [MASK]
 NULL_VALUE = -99999.25                      # Null value (NOSVALUE)
 USE_MASK   = 0                              # Use of mask flag (IMASK)
-FILENAME   = /home/data/data/input/Mask.dat      # Mask file 
+FILENAME   = /home/data/input/Mask.dat      # Mask file 
 
 
 ##### Search Parameters #####
